2004-02-24  JP Rosevear <jpr@ximian.com>

	* gui/component/addressbook-migrate.c (migration_context_new):
	don't init the dialog here
	(addressbook_migrate): init it here

	Fixes #54214
	
2004-02-20  Chris Toshok  <toshok@ximian.com>
	* gui/contact-editor/e-contact-editor.c (phone_entry_changed):
	remove some spew.

2004-02-19  Chris Toshok  <toshok@ximian.com>

	* gui/component/component-factory.c: s/HAVE_NSS/ENABLE_SMIME.

	* gui/component/addressbook-component.c: s/HAVE_NSS/ENABLE_SMIME.

2004-02-19  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook.c (activate_source): split out the
	majority of the set_prop code for PROPERTY_SOURCE_UID_IDX here, so
	it can be used for both SOURCE_UID and FOLDER_URI.
	(set_prop): add a setter for "folder_uri".  we sorta fudge things
	and use the uri for the uid (the uid is only used as a hash key to
	look up the view associated with the uri/source, so we should be
	good still.)
	(get_prop): add getter for "folder_uri".
	(addressbook_new_control): add the "folder_uri" property to our
	property bag.

2004-02-19  Hans Petter Jansson  <hpj@ximian.com>

	Fixes #45308 and duplicates.

	* gui/widgets/e-addressbook-model.c (eab_model_set_property): Store
	the IDs of book signals connected to, so we can disconnect from them
	later.

2004-02-18  Hao Sheng  <hao.sheng@sun.com>

	[ fixes bug #52765 ]

	* gui/contact-editor/e-contact-editor.c
	(e_contact_editor_confirm_delete): make delete dialog support
	ESC press.

2004-02-17  Chris Toshok  <toshok@ximian.com>

	* gui/contact-list-editor/e-contact-list-editor.h (struct
	_EContactListEditor): add image_set slot.

	* gui/contact-list-editor/e-contact-list-editor.c
	(list_image_changed_cb): set image_set = TRUE.
	(e_contact_list_editor_init): init image_set = FALSE
	(extract_info): only set the LOGO attribute if image_set = TRUE.

	* gui/contact-editor/e-contact-editor.h (struct _EContactEditor):
	add image_set slot.
